--- a/po/stellarium/uk.po
+++ b/po/stellarium/uk.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: stellarium-uk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-20 00:01+0700\n"
-"PO-Revision-Date: 2013-02-19 02:43+0000\n"
-"Last-Translator: yurchor <Unknown>\n"
+"PO-Revision-Date: 2013-02-20 18:29+0000\n"
+"Last-Translator: Yuri Chornoivan <yurchor@gmail.com>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-20 04:46+0000\n"
+"X-Launchpad-Export-Date: 2013-02-21 05:12+0000\n"
 "X-Generator: Launchpad (build 16491)\n"
 "X-Poedit-Country: UKRAINE\n"
 "Language: uk\n"
@@ -315,6 +315,10 @@ msgid ""
 "relation was also implicitly adopted in the syzygy tables of Goldstine "
 "(1973)."
 msgstr ""
+"У таблицях Tuckerman (1962, 1964) наведено дані щодо розташування Сонця, "
+"Місяця та планет з п’яти- і десятиденним інтервалом від 601 р. до н.е. до "
+"1649 р. н.е. Те саме співвідношення також неявно використано у таблицях "
+"Goldstine (1973)."
 
 #: src/core/StelCore.cpp:1444
 #, qt-format
@@ -838,7 +842,7 @@ msgstr ""
 #. TRANSLATORS: Full phrase is "Algorithm of DeltaT"
 #: src/gui/ConfigurationDialog.cpp:1116
 msgid "Algorithm of"
-msgstr ""
+msgstr "Алгоритм обчислення"
 
 #: src/gui/ConfigurationDialog.cpp:1127
 msgid "Without correction"
