--- a/po/stellarium/pl.po
+++ b/po/stellarium/pl.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-22 10:38+0700\n"
-"PO-Revision-Date: 2013-02-21 19:26+0000\n"
-"Last-Translator: konrad509 <konrad509@op.pl>\n"
+"PO-Revision-Date: 2013-02-24 04:37+0000\n"
+"Last-Translator: pp/bs <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-23 04:52+0000\n"
+"X-Launchpad-Export-Date: 2013-02-24 04:39+0000\n"
 "X-Generator: Launchpad (build 16506)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -458,7 +458,7 @@ msgstr ""
 
 #: src/core/StelCore.cpp:1506
 msgid "Used by default."
-msgstr ""
+msgstr "Używane domyślnie."
 
 #: src/core/StelCore.cpp:1509
 #, qt-format
@@ -466,6 +466,8 @@ msgid ""
 "This is a quadratic formula for calculation of %1T with coefficients defined "
 "by the user."
 msgstr ""
+"To jest równanie kwadratowe do obliczania %1T ze współczynnikami określanymi "
+"przez użytkownika."
 
 #: src/core/StelCore.cpp:1512 src/core/SimbadSearcher.cpp:132
 msgid "Error"
@@ -473,21 +475,21 @@ msgstr "Błąd"
 
 #: src/core/StelCore.cpp:1609
 msgid "(estimated)"
-msgstr ""
+msgstr "(szacunkowe)"
 
 #: src/core/StelCore.cpp:1622
 msgid "with a typical 1-second accuracy"
-msgstr ""
+msgstr "z typową dokładnością do 1 sekundy"
 
 #: src/core/StelCore.cpp:1648
 #, qt-format
 msgid "Valid range of usage: between years %1 and %2, %3."
-msgstr ""
+msgstr "Dopuszczalny zakres: między latami %1 a %2, %3."
 
 #: src/core/StelCore.cpp:1650
 #, qt-format
 msgid "Valid range of usage: between years %1 and %2."
-msgstr ""
+msgstr "Dopuszczalny zakres: między latami %1 a %2."
 
 #: src/core/StelProjector.cpp:123
 msgid "Maximum FOV: "
@@ -762,7 +764,7 @@ msgstr ""
 #. TRANSLATORS: Full phrase is "Algorithm of DeltaT"
 #: src/gui/ConfigurationDialog.cpp:1116
 msgid "Algorithm of"
-msgstr ""
+msgstr "Algorytm"
 
 #: src/gui/ConfigurationDialog.cpp:1127
 msgid "Without correction"
