--- a/po/stellarium/pt_BR.po
+++ b/po/stellarium/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-22 10:38+0700\n"
-"PO-Revision-Date: 2013-02-23 01:12+0000\n"
+"PO-Revision-Date: 2013-02-23 14:34+0000\n"
 "Last-Translator: Adriano Steffler <Unknown>\n"
 "Language-Team: Portuguese (Brazil) <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-23 04:55+0000\n"
+"X-Launchpad-Export-Date: 2013-02-24 04:39+0000\n"
 "X-Generator: Launchpad (build 16506)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1198
@@ -264,6 +264,10 @@ msgid ""
 "in his article <em>Einstein's Theory of Relativity Confirmed by Ancient "
 "Solar Eclipses</em> (%1). See for more info %2here%3."
 msgstr ""
+"Esta fórmula foi obtida por C. Schoch em 1931 e foi empregada por G. "
+"Henriksson em seu artigo <em>Einstein's Theory of Relativity Confirmed by "
+"Ancient Solar Eclipses</em> (%1). Informações adicionais podem ser obtidas "
+"%2aqui%3."
 
 #: src/core/StelCore.cpp:1430
 #, qt-format
@@ -271,6 +275,8 @@ msgid ""
 "This empirical equation was published by G. M. Clemence in the article "
 "<em>On the system of astronomical constants</em> (%1)."
 msgstr ""
+"Esta equação empírica foi publicada por G. M. Clemence no artigo <em>On the "
+"system of astronomical constants</em> (%1)."
 
 #: src/core/StelCore.cpp:1433
 #, qt-format
@@ -280,6 +286,10 @@ msgid ""
 "<em>Astronomical Formulae for Calculators</em>. It was also adopted in the "
 "PC program SunTracker Pro."
 msgstr ""
+"Esta fórmula é baseada num estudo das observações do Sol, da Lua e dos "
+"planetas, realizada após 1650 por Spencer Jones (%1), e foi empregada por "
+"Jean Meeus nas suas <em>Astronomical Formulae for Calculators</em>. Ela "
+"também foi adotada no programa para computador SunTracker Pro."
 
 #: src/core/StelCore.cpp:1437
 msgid ""
@@ -287,6 +297,9 @@ msgid ""
 "adopted in the <em>Astronomical Ephemeris</em> and in the <em>Canon of Solar "
 "Eclipses</em> by Mucke & Meeus (1983)."
 msgstr ""
+"Esta é uma versão levemente modificada da fórmula do IAU (1952), que foi "
+"adotada nas <em>Astronomical Ephemerides</em> e no <em>Canon of Solar "
+"Eclipses</em> por Mucke e Meeus (1983)."
 
 #: src/core/StelCore.cpp:1441
 msgid ""
@@ -307,6 +320,9 @@ msgid ""
 "article <em>The accelerations of the earth and moon from early astronomical "
 "observations</em> (%1)."
 msgstr ""
+"Esta equação foi publicada por P. M. Muller e F. R. Stephenson no artigo "
+"<em>The accelerations of the earth and moon from early astronomical "
+"observations</em> (%1)."
 
 #: src/core/StelCore.cpp:1448
 #, qt-format
@@ -314,6 +330,8 @@ msgid ""
 "This equation was published by F. R. Stephenson in the article <em>Pre-"
 "Telescopic Astronomical Observations</em> (%1)."
 msgstr ""
+"Esta equação foi publicada por F. R. Stephenson no artigo <em>Pre-Telescopic "
+"Astronomical Observations</em> (%1)."
 
 #: src/core/StelCore.cpp:1451
 #, qt-format
@@ -322,6 +340,9 @@ msgid ""
 "<em>Polynomial approximations for the correction delta T E.T.-U.T. in the "
 "period 1800-1975</em> (%1)."
 msgstr ""
+"Esta equação foi publicada por L. D. Schmadel e G. Zech no artigo "
+"<em>Polynomial approximations for the correction delta T E.T.-U.T. in the "
+"period 1800-1975</em> (%1)."
 
 #: src/core/StelCore.cpp:1454
 msgid ""
@@ -340,6 +361,9 @@ msgid ""
 "article <em>Long-term changes in the rotation of the earth - 700 B.C. to "
 "A.D. 1980</em> (%1)."
 msgstr ""
+"Esta fórmula foi publicada por F. R. Stephenson e L. V. Morrison no artigo "
+"<em>Long-term changes in the rotation of the earth - 700 B.C. to A.D. "
+"1980</em> (%1)."
 
 #: src/core/StelCore.cpp:1460
 msgid "This algorithm is used in the PC planetarium program Guide 7."
@@ -373,6 +397,9 @@ msgid ""
 "<em>Empirical Transformations from U.T. to E.T. for the Period 1800-"
 "1988</em> (%1)."
 msgstr ""
+"Esta equação foi publicada por L. D. Schmadel e G. Zech no artigo "
+"<em>Empirical Transformations from U.T. to E.T. for the Period 1800-"
+"1988</em> (%1)."
 
 #: src/core/StelCore.cpp:1472
 msgid ""
@@ -391,6 +418,9 @@ msgid ""
 "article <em>Long-Term Fluctuations in the Earth's Rotation: 700 BC to AD "
 "1990</em> (%1)."
 msgstr ""
+"Esta equação foi publicada por F. R. Stephenson e L. V. Morrison no artigo "
+"<em>Long-Term Fluctuations in the Earth's Rotation: 700 BC to AD 1990</em> "
+"(%1)."
 
 #: src/core/StelCore.cpp:1478
 #, qt-format
@@ -398,6 +428,8 @@ msgid ""
 "F. R. Stephenson published this formula in his book <em>Historical Eclipses "
 "and Earth's Rotation</em> (%1)."
 msgstr ""
+"F. R. Stephenson publicou esta fórmula no seu livro <em>Historical Eclipses "
+"and Earth's Rotation</em> (%1)."
 
 #: src/core/StelCore.cpp:1481
 msgid ""
@@ -407,6 +439,11 @@ msgid ""
 "J. Meeus in the second edition of his <em>Astronomical Algorithms</em> "
 "(1998)."
 msgstr ""
+"Esta fórmula também é empregada no programa EmapWin, de Shinobu Takesako, "
+"para mostrar as circunstâncias de eclipses solares de 3000 a.C. a 3000 d.C., "
+"e no planetário interativo Sky View Cafe, de Kerry Shetline. Uma variante "
+"também é oferecida por J. Meeus na segunda edição de seus <em>Astronomical "
+"Algorithms</em> (1998)."
 
 #: src/core/StelCore.cpp:1485
 msgid ""
@@ -414,6 +451,10 @@ msgid ""
 "used. Table for 1620..2000, and includes a variant of Chapront, Chapront-"
 "Touze & Francou (1997) for dates outside 1620..2000."
 msgstr ""
+"De J. Meeus, <em>Astronomical Algorithms</em> (2nd ed., 1998), e amplamente "
+"utilizado. A tabela é destinada ao período de 1620 a 2000, e inclui uma "
+"variante de Chapront, Chapront-Touze e Francou (1997) para datas fora do "
+"período 1620-2000."
 
 #: src/core/StelCore.cpp:1488
 #, qt-format
@@ -421,6 +462,8 @@ msgid ""
 "The JPL Solar System Dynamics Group of the NASA Jet Propulsion Laboratory "
 "use this formula in their interactive website %1JPL Horizons%2."
 msgstr ""
+"O JPL Solar System Dynamics Group do Laboratório de Propulsão a Jato da NASA "
+"utiliza esta fórmula em seu sítio interativo %1JPL Horizons%2."
 
 #: src/core/StelCore.cpp:1491
 #, qt-format
@@ -428,6 +471,8 @@ msgid ""
 "This polynome was published by J. Meeus and L. Simons in article "
 "<em>Polynomial approximations to Delta T, 1620-2000 AD</em> (%1)."
 msgstr ""
+"Este polinômio foi publicado por J. Meeus e L. Simons no artigo "
+"<em>Polynomial approximations to Delta T, 1620-2000 AD</em> (%1)."
 
 #: src/core/StelCore.cpp:1494
 msgid ""
@@ -493,6 +538,8 @@ msgid ""
 "This is a quadratic formula for calculation of %1T with coefficients defined "
 "by the user."
 msgstr ""
+"Esta é uma fórmula quadrática para calcular o %1T com coeficientes definidos "
+"pelo usuário."
 
 #: src/core/StelCore.cpp:1512 src/core/SimbadSearcher.cpp:132
 msgid "Error"
