--- a/po/stellarium/uk.po
+++ b/po/stellarium/uk.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: stellarium-uk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-25 09:11+0700\n"
-"PO-Revision-Date: 2013-02-24 20:30+0000\n"
+"PO-Revision-Date: 2013-02-26 07:41+0000\n"
 "Last-Translator: Yuri Chornoivan <yurchor@gmail.com>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-02-26 04:54+0000\n"
+"X-Launchpad-Export-Date: 2013-02-27 04:35+0000\n"
 "X-Generator: Launchpad (build 16506)\n"
 "X-Poedit-Country: UKRAINE\n"
 "Language: uk\n"
@@ -484,6 +484,10 @@ msgid ""
 "Personal Computer</em> (2000) provides simple 3rd-order polynomial data fits "
 "for the recent past."
 msgstr ""
+"У четвертому виданні книги O. Montenbruck & T. Pfleger's <em>Astronomy on "
+"the Personal Computer</em> (2000) (<em>Астрономія на персональному "
+"комп’ютері</em>) наведено просте поліноміальне наближення 3-го порядку "
+"точності лише для нещодавніх дат у минулому."
 
 #: src/core/StelCore.cpp:1488
 msgid ""
@@ -492,6 +496,10 @@ msgid ""
 "<em>Calendrical Tabulations</em> (2002). It is based on Jean Meeus' "
 "<em>Astronomical Algorithms</em> (1991)."
 msgstr ""
+"E. M. Reingold і N. Dershowitz навели цю наближену поліноміальну формулу у "
+"книзі <em>Calendrical Calculations</em> (3-є видання, 2007) та у книзі "
+"<em>Calendrical Tabulations</em> (2002). Її засновано на даних книги Jean "
+"Meeus <em>Astronomical Algorithms</em> (1991)."
 
 #: src/core/StelCore.cpp:1491
 #, qt-format
@@ -500,6 +508,9 @@ msgid ""
 "in article <em>Historical values of the Earth's clock error %1T and the "
 "calculation of eclipses</em> (%2) with addendum in (%3)."
 msgstr ""
+"Цей важливий розв’язок було опубліковано L. V. Morrison і F. R. Stephenson у "
+"статті <em>Historical values of the Earth's clock error %1T and the "
+"calculation of eclipses</em> (%2) з додатковими даними у (%3)."
 
 #: src/core/StelCore.cpp:1494
 #, qt-format
@@ -524,6 +535,12 @@ msgid ""
 "Solar Eclipses: -1900 to +3000</em> (2006). This formula is also used in the "
 "solar, lunar and planetary ephemeris program SOLEX."
 msgstr ""
+"Цей розв’язок, виведений F. Espenak і J. Meeus, отриманий на основі роботи "
+"Morrison & Stephenson (2004) та поліноміального наближення за табульованим "
+"даними спостережень у період від 1600 до 2000 року, використано на %1сайті "
+"затемнень NASA%2 та наведено у книзі <em>Five Millennium Canon of Solar "
+"Eclipses: -1900 to +3000</em> цих же авторів (2006). Також цю формулу "
+"використано у програмі для обчислення ефемерид Сонця, Місяця та планет SOLEX."
 
 #: src/core/StelCore.cpp:1497
 msgid "Used by default."
@@ -918,7 +935,7 @@ msgstr "Stephenson (1997)"
 
 #: src/gui/ConfigurationDialog.cpp:1146
 msgid "Meeus (1998) (with Chapront, Chapront-Touze & Francou (1997))"
-msgstr ""
+msgstr "Meeus (1998) (with Chapront, Chapront-Touze і Francou (1997))"
 
 #: src/gui/ConfigurationDialog.cpp:1147
 msgid "JPL Horizons"
@@ -8242,49 +8259,3 @@ msgstr "Висота сонця у сутінках: 0°"
 
 #~ msgid "Edit Alternative Shortcut"
 #~ msgstr "Змінити альтернативне скорочення"
-
-#, qt-format
-#~ msgid ""
-#~ "This equation was published by L. V. Morrison and F. R. Stephenson in "
-#~ "article <em>Historical values of the Earth's clock error %1T and the "
-#~ "calculation of eclipses</em> (%2) with addendum in (%3)."
-#~ msgstr ""
-#~ "Це рівняння було опубліковано L. V. Morrison і F. R. Stephenson у статті "
-#~ "<em>Historical values of the Earth's clock error %1T and the calculation of "
-#~ "eclipses</em> (%2) з додатковими даними у (%3)."
-
-#~ msgid "Chapront, Chapront-Touze & Francou (1997) & Meeus (1998)"
-#~ msgstr "Chapront, Chapront-Touze і Francou (1997) та Meeus (1998)"
-
-#, qt-format
-#~ msgid ""
-#~ "This formula by F. Espenak and J. Meeus is used for the %1NASA Eclipse Web "
-#~ "Site%2 and in their <em>Five Millennium Canon of Solar Eclipses: -1900 to "
-#~ "+3000</em> (2006). This formula is also used in the solar, lunar and "
-#~ "planetary ephemeris program SOLEX."
-#~ msgstr ""
-#~ "Цю формулу, виведену F. Espenak і J. Meeus, використано на %1сайті затемнень "
-#~ "NASA%2 та наведено у книзі <em>Five Millennium Canon of Solar Eclipses: -"
-#~ "1900 to +3000</em> цих же авторів (2006). Також цю формулу використано у "
-#~ "програмі для обчислення ефемерид Сонця, Місяця та планет SOLEX."
-
-#~ msgid ""
-#~ "The fourth edition of O. Montenbruck & T. Pfleger's <em>Astronomy on the "
-#~ "Personal Computer</em> (2000) provides 3rd-order polynomials for the recent "
-#~ "past only."
-#~ msgstr ""
-#~ "У четвертому виданні книги O. Montenbruck & T. Pfleger's <em>Astronomy on "
-#~ "the Personal Computer</em> (2000) (<em>Астрономія на персональному "
-#~ "комп’ютері</em>) наведено поліноми 3-го порядку точності лише для нещодавніх "
-#~ "дат у минулому."
-
-#~ msgid ""
-#~ "E. M. Reingold & N. Dershowitz present an approximation formula in "
-#~ "<em>Calendrical Calculations</em> (3rd ed. 2007) and in their "
-#~ "<em>Calendrical Tabulations</em> (2002). It is based on Jean Meeus' "
-#~ "<em>Astronomical Algorithms</em> (1991)."
-#~ msgstr ""
-#~ "E. M. Reingold і N. Dershowitz навели наближену формулу у книзі "
-#~ "<em>Calendrical Calculations</em> (3-є видання, 2007) та у книзі "
-#~ "<em>Calendrical Tabulations</em> (2002). Її засновано на даних книги Jean "
-#~ "Meeus <em>Astronomical Algorithms</em> (1991)."
